src-tauri/output.txt
    Checking imagesorter v0.1.0 (/home/haklon/Git/ImageSorter/src-tauri)
error[E0437]: type `Distance` is not a member of trait `bk_tree::Metric`
  --> src/services/hashing.rs:93:5
   |
93 |     type Distance = u32;
   |     ^^^^^^^^^^^^^^^^^^^^ not a member of trait `bk_tree::Metric`

warning: unused import: `Deserialize`
 --> src/commands/folder.rs:7:24
  |
7 | use serde::{Serialize, Deserialize};
  |                        ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `RgbaImage` and `Rgba`
 --> src/services/hashing.rs:6:45
  |
6 | use image::{DynamicImage, GenericImageView, Rgba, RgbaImage};
  |                                             ^^^^  ^^^^^^^^^

warning: unused import: `image::GenericImageView`
 --> src/services/thumbnail.rs:5:5
  |
5 | use image::GenericImageView;
  |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Utc`
 --> src/services/metadata.rs:3:56
  |
3 | use chrono::{DateTime, Local, NaiveDateTime, TimeZone, Utc};
  |                                                        ^^^

warning: unused import: `PathBuf`
 --> src/services/metadata.rs:6:23
  |
6 | use std::path::{Path, PathBuf};
  |                       ^^^^^^^

warning: unused import: `std::time::SystemTime`
 --> src/services/metadata.rs:7:5
  |
7 | use std::time::SystemTime;
  |     ^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0437`.
warning: `imagesorter` (lib) generated 6 warnings
error: could not compile `imagesorter` (lib) due to 1 previous error; 6 warnings emitted
